fix auto deploy

--- a/assets/tailwind-input.css
+++ b/assets/tailwind-input.css
@@ -1,4 +1,4 @@
-@import 'tailwindcss';
+@import 'tailwindcss/index.css';
 
 .container {
   @apply mx-auto w-full md:w-[1440px] lg:w-[90vw] max-w-full px-4 py-8;
