--- a/sections/image-with-text-custom.liquid
+++ b/sections/image-with-text-custom.liquid
@@ -2,33 +2,13 @@
   <div class="iwt-container flex items-center py-5 gap-4 {% if section.settings.image_position == 'right' %} flex-row-reverse {% endif %}">
     <div class="w-1/2">
       {% if section.settings.image %}
-        {{ section.settings.image | image_url: width: 300 | img_tag }}
+        {{ section.settings.image | image_url: width: 500 | image_tag }}
       {% else %}
         {{ 'collection-1' | placeholder_svg_tag }}
       {% endif %}
     </div>
     <div class="iwt-content w-1/2">
-      {% for block in section.blocks %}
-        {% case block.type %}
-          {% when 'heading' %}
-            <h2>{{ block.settings.value }}</h2>
-          {% when 'description' %}
-            <p class="mt-2 text-black ">{{ block.settings.value }}</p>
-          {% when 'button' %}
-            {% if block.settings.button_link != empty %}
-              <a href="{{ block.settings.button_link }}" class="mt-3 block border px-3 py-2 w-fit">
-                {{ block.settings.button_text }}
-              </a>
-            {% else %}
-              <button class="mt-3 block border px-3 py-2">
-                {{ block.settings.button_text }}
-              </button>
-            {% endif %}
-
-          {% when 'caption' %}
-            <span class="block text-medium text-gray-500 mt-4"> {{ block.settings.value }} </span>
-        {% endcase %}
-      {% endfor %}
+      {% content_for 'blocks' %}
     </div>
   </div>
 </section>
@@ -73,68 +53,25 @@
   ],
   "blocks": [
     {
-      "type": "heading",
-      "name": "Heading",
-      "settings": [
-        {
-          "type": "text",
-          "id": "value",
-          "label": "Value"
-        }
-      ]
+      "type": "heading"
     },
     {
-      "type": "description",
-      "name": "Description",
-      "settings": [
-        {
-          "type": "text",
-          "id": "value",
-          "label": "Value"
-        }
-      ]
+      "type": "description"
     },
     {
-      "type": "button",
-      "name": "Button",
-      "settings": [
-        {
-          "type": "text",
-          "id": "button_text",
-          "label": "Button Text",
-          "default": "Button"
-        },
-        {
-          "type": "url",
-          "id": "button_link",
-          "label": "Button Link"
-        }
-      ]
+      "type": "subtext"
     },
     {
-      "type": "caption",
-      "name": "Caption",
-      "settings": [
-        {
-          "type": "text",
-          "id": "value",
-          "label": "Value"
-        }
-      ]
+      "type": "button"
     }
   ],
+  "max_blocks": 5,
   "presets": [
     {
-      "name": "Image with Text Custom",
+      "name": "Image with Text Custom blocks",
       "blocks": [
         {
           "type": "heading"
-        },
-        {
-          "type": "description"
-        },
-        {
-          "type": "button"
         }
       ]
     }
