--- a/blocks/subtext.liquid
+++ b/blocks/subtext.liquid
@@ -13,7 +13,7 @@
       "type": "text",
       "id": "text",
       "label": "Subtext content",
-      "default": "Lorem ipsum dolor sit amet."
+      "default": "subtext content"
     },
     { "type": "range", "label": "Margin top", "id": "margin_top", "default": 16, "min": 0, "max": 100, "step": 1 },
     { "type": "range", "label": "Margin bottom", "id": "margin_bottom", "default": 16, "min": 0, "max": 100, "step": 1 }
