sync data from BO

--- a/sections/image-with-text-custom.liquid
+++ b/sections/image-with-text-custom.liquid
@@ -53,16 +53,6 @@
       "type": "button"
     }
   ],
-  "max_blocks": 5,
-  "presets": [
-    {
-      "name": "Image with Text Custom blocks",
-      "blocks": [
-        {
-          "type": "heading"
-        }
-      ]
-    }
-  ]
+  "max_blocks": 5
 }
 {% endschema %}
