--- a/blocks/description.liquid
+++ b/blocks/description.liquid
@@ -9,7 +9,8 @@
     {
       "type": "text",
       "id": "text",
-      "label": "Description content"
+      "label": "Description content",
+      "default": "Lorem Ipsum is simply dummy text of the printing and typesetting industry."
     },
     {
       "type": "color",
@@ -19,6 +20,12 @@
     },
     { "type": "range", "label": "Margin top", "id": "margin_top", "default": 16, "min": 0, "max": 100, "step": 1 },
     { "type": "range", "label": "Margin bottom", "id": "margin_bottom", "default": 16, "min": 0, "max": 100, "step": 1 }
+  ],
+  "presets": [
+    {
+      "name": "Description",
+      "settings": {}
+    }
   ]
 }
 {% endschema %}
