--- a/blocks/heading.liquid
+++ b/blocks/heading.liquid
@@ -62,6 +62,26 @@
     },
     { "type": "range", "label": "Margin top", "id": "margin_top", "default": 16, "min": 0, "max": 100, "step": 1 },
     { "type": "range", "label": "Margin bottom", "id": "margin_bottom", "default": 16, "min": 0, "max": 100, "step": 1 }
+  ],
+  "presets": [
+    {
+      "name": "Heading 1",
+      "settings": {
+        "heading_level": "h1"
+      }
+    },
+    {
+      "name": "Heading 2",
+      "settings": {
+        "heading_level": "h2"
+      }
+    },
+    {
+      "name": "Heading 3",
+      "settings": {
+        "heading_level": "h3"
+      }
+    }
   ]
 }
 {% endschema %}
