--- a/blocks/subtext.liquid
+++ b/blocks/subtext.liquid
@@ -17,6 +17,12 @@
     },
     { "type": "range", "label": "Margin top", "id": "margin_top", "default": 16, "min": 0, "max": 100, "step": 1 },
     { "type": "range", "label": "Margin bottom", "id": "margin_bottom", "default": 16, "min": 0, "max": 100, "step": 1 }
+  ],
+  "presets": [
+    {
+      "name": "Subtext",
+      "settings": {}
+    }
   ]
 }
 {% endschema %}
