--- a/blocks/button.liquid
+++ b/blocks/button.liquid
@@ -20,6 +20,7 @@
 {% schema %}
 {
   "name": "Button",
+  "tag": "nui",
   "settings": [
     { "type": "header", "content": "Button Settings" },
     {
