--- a/sections/image-with-text-custom.liquid
+++ b/sections/image-with-text-custom.liquid
@@ -13,6 +13,10 @@
   </div>
 </section>
 
+{% javascript %}
+  console.log('Image with text loaded');
+{% endjavascript %}
+
 {% schema %}
 {
   "name": "Image with Text Custom",
